# simple_snake_game

./: .gitignore  CMakeLists.txt  README.md  build_app.sh
cmake/sdl2/: Copyright.txt
source/: main.cpp
